--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
     "electron": "^24.1.3",
-    "electron-builder": "^23.6.0",
+    "electron-builder": "^24.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.1.4",
     "vite-plugin-electron": "^0.11.2",
     "vite-plugin-electron-renderer": "^0.14.1",
     "vue": "^3.2.47",
     "vue-tsc": "^1.2.0"
+  },
+  "dependencies": {
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
