--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-tsconfig-paths": "^4.2.0",
+    "vuetify": "^3.2.5"
   }
 }
